--- a/model_training/rnn_args.yaml
+++ b/model_training/rnn_args.yaml
@@ -14,12 +14,12 @@ model:
     input_trainable: true # whether the input layer is trainable
     input_layer_dropout: 0.2 # dropout rate for the input layer
 
-gpu_number: '1' # GPU number to use for training, formatted as a string (e.g., '0', '1', etc.)
+gpu_number: '0' # GPU number to use for training, formatted as a string (e.g., '0', '1', etc.)
 mode: train
 use_amp: true # whether to use automatic mixed precision (AMP) for training
 
-output_dir: trained_models/baseline_rnn # directory to save the trained model and logs
-checkpoint_dir: trained_models/baseline_rnn/checkpoint # directory to save checkpoints during training
+output_dir: s3://4k-woody-btt/model-yoonho/baseline_rnn # directory to save the trained model and logs
+checkpoint_dir: s3://4k-woody-btt/model-yoonho/checkpoints # directory to save checkpoints during training
 init_from_checkpoint: false # whether to initialize the model from a checkpoint
 init_checkpoint_path: None # path to the checkpoint to initialize the model from, if any
 save_best_checkpoint: true # whether to save the best checkpoint based on validation metrics
